# kidanalysis-delft

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
scripts/: kid_test.db
scripts/aste/: Configure.py  FitSweep.py  SaveFits.py  common.py  current_outdir.conf  flag_KIDs_based_on_FitSweep.py  run_sf.sh  run_sf_2025_for_aste.sh  show_kids_figs.py  util.py
scripts/libs/bbsweeplib/: NEP.py  Prad.py  TODcalib.py  __init__.py  arrays.py  cache.py  deglitch.py  files.py  kids.py  misc.py  power.py
scripts/libs/fit/: __init__.py  confidence_band.py  expr_with_args.py  fit.py  fitresult.py
scripts/libs/mkid_data/: __init__.py  calibrate_tod.py  data.py  fitters.py  get_error.py  kidfit.py  misc.py  peak_search.py  psd.py  temperature.py
scripts/terahertzsweep/: AnaPowersweep.py  AnaSpectrum.py  Configure.py  FitSweep.py  KIDCorresp.py  KIDCorresp_ikeda.py  KIDCorresp_test.py  SaveFits.py  THzFrequencyTOD.py  _AnaSpectrum.py  _SaveFits.py  __init__.py  bu_KIDCorresp_ikeda.py  common.py  current_outdir.conf  current_outdir.conf~  exec_run_sf_2025.py  flag_KIDs_based_on_FitSweep.py  run_noise.sh  run_powersweep.sh  run_sf.align_test.sh  run_sf.fix.sh  run_sf.sh.org  run_sf_2025.sh  run_sf_multi_FitSweep.sh  scp_ln_kidcorresp.sh  show_kids_figs.py  util.py
