[tool.poetry]
name = "kidanalysis-delft"
version = "0.1.0"
description = "KID analysis scripts made in Delft"
authors = ["Kennichi Karatsu", "Shinji Fujita"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "^5.2"
h5py = "3.10"
lmfit = "^1.2"
numpy = "^1.23"
matplotlib = "^3.7"
pandas = ">1.5, <3.0"
scikit-learn = "^1.2"
scipy = "^1.10"
sympy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
