[tool.poetry]
name = "kidanalysis-delft"
version = "2024.7.0"
description = "KID analysis scripts made in Delft"
authors = ["Kenichi Karatsu", "Shinji Fujita"]
maintainers = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = ">=5.2, <7.0"
h5py = ">=3.7, <3.11"
lmfit = "^1.2"
numpy = "^1.23"
matplotlib = "^3.7"
pandas = ">=1.5, <3.0"
scikit-learn = "^1.2"
scipy = "^1.10"
sympy = "^1.10"

[tool.poetry.group.dev.dependencies]
deshima-rawdata = "^2024.4"
ipython = "^8.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
